Merged in feature/CAP-952_microdeposits (pull request #728)
Approved-by: Craig Miller