@@ -10,16 +10,20 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.plaid.client.model.AccountBase;
 import com.plaid.client.model.AccountIdentity;
 import com.plaid.client.model.AccountsBalanceGetRequest;
+import com.plaid.client.model.AccountsGetRequest;
 import com.plaid.client.model.AccountsGetResponse;
 import com.plaid.client.model.AuthGetRequest;
 import com.plaid.client.model.AuthGetResponse;
 import com.plaid.client.model.CountryCode;
+import com.plaid.client.model.DepositoryAccountSubtype;
+import com.plaid.client.model.DepositoryFilter;
 import com.plaid.client.model.IdentityGetRequest;
 import com.plaid.client.model.IdentityGetResponse;
 import com.plaid.client.model.InstitutionsGetByIdRequest;
 import com.plaid.client.model.InstitutionsGetByIdResponse;
 import com.plaid.client.model.ItemPublicTokenExchangeRequest;
 import com.plaid.client.model.ItemPublicTokenExchangeResponse;
+import com.plaid.client.model.LinkTokenAccountFilters;
 import com.plaid.client.model.LinkTokenCreateRequest;
 import com.plaid.client.model.LinkTokenCreateRequestUser;
 import com.plaid.client.model.LinkTokenCreateResponse;
@@ -27,6 +31,8 @@ import com.plaid.client.model.NumbersACH;
 import com.plaid.client.model.ProcessorStripeBankAccountTokenCreateRequest;
 import com.plaid.client.model.ProcessorStripeBankAccountTokenCreateResponse;
 import com.plaid.client.model.Products;
+import com.plaid.client.model.SandboxItemSetVerificationStatusRequest.VerificationStatusEnum;
+import com.plaid.client.model.SandboxItemSetVerificationStatusResponse;
 import com.plaid.client.request.PlaidApi;
 import java.io.IOException;
 import java.io.StringWriter;
@@ -35,6 +41,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Profile;
@@ -46,10 +54,14 @@ import retrofit2.Response;
 @Profile("prod")
 public class PlaidClient {
 
-  public static final String PLAID_CLIENT_NAME = "ClearSpend";
-  public static final String LANGUAGE = "en";
+  private static final String PLAID_CLIENT_NAME = "ClearSpend";
+  private static final String LANGUAGE = "en";
+  private static final DepositoryFilter DEPOSITORY_FILTER =
+      new DepositoryFilter()
+          .accountSubtypes(
+              List.of(DepositoryAccountSubtype.CHECKING, DepositoryAccountSubtype.SAVINGS));
 
-  @NonNull private final PlaidProperties plaidProperties;
+  @NonNull protected final PlaidProperties plaidProperties;
   @NonNull protected final PlaidApi plaidApi;
   @NonNull private final ObjectMapper mapper;
   @NonNull private final PlaidLogEntryRepository plaidLogEntryRepository;
@@ -74,7 +86,7 @@ public class PlaidClient {
   }
 
   public PlaidClient.OwnersResponse getOwners(
-      String accessToken, @NonNull TypedId<BusinessId> businessId) throws IOException {
+      @NonNull TypedId<BusinessId> businessId, String accessToken) throws IOException {
     IdentityGetRequest authGetRequest = new IdentityGetRequest().accessToken(accessToken);
     Response<IdentityGetResponse> authGetResponse = plaidApi.identityGet(authGetRequest).execute();
 
@@ -90,66 +102,85 @@ public class PlaidClient {
       String institutionName) {}
 
   @SuppressWarnings("MissingCasesInEnumSwitch")
-  public String createLinkToken(TypedId<BusinessId> businessId) throws IOException {
+  public String createNewLinkToken(TypedId<BusinessId> businessId) throws IOException {
     /* The Plaid documentation suggests that we can use
      * <a href="https://plaid.com/docs/api/items/#itemget">/item/get</a> to find out
      * what products an institution supports, but we don't have the institution yet.
      *
-     * I'm assuming the majority of institutions will allow retrieving IDENTITY,
-     * so adding an extra call to avoid the exception seems like it would slow
-     * the process needlessly.
+     * Micro-deposit linking is only an option if AUTH stands alone in the list of products
+     * requested.
      */
-    try {
-      return createLinkToken(businessId, Arrays.asList(Products.AUTH, Products.IDENTITY));
-    } catch (PlaidClientException e) {
-      switch (e.getErrorCode()) {
-          // These are the only cases that warrant special handling
-        case PRODUCTS_NOT_SUPPORTED,
-            PRODUCT_NOT_ENABLED,
-            PRODUCT_NOT_READY,
-            PRODUCT_UNAVAILABLE,
-            INVALID_PRODUCT,
-            INVALID_PRODUCTS -> {
-          return createLinkToken(businessId, Collections.singletonList(Products.AUTH));
-        }
-      }
-      throw e;
-    }
+    return createNewLinkToken(businessId, List.of(Products.AUTH));
   }
 
-  public String createLinkToken(TypedId<BusinessId> businessId, String accessToken)
+  /**
+   * Create a basic LinkTokenCreateRequest which will be decorated in accordance with its specific
+   * use case.
+   *
+   * @param businessId The business (user, from a Plaid perspective) involved
+   * @return The LinkTokenCreateRequest
+   */
+  private LinkTokenCreateRequest createLinkTokenCreateRequest(TypedId<BusinessId> businessId) {
+    return new LinkTokenCreateRequest()
+        .clientName(PLAID_CLIENT_NAME)
+        .user(new LinkTokenCreateRequestUser().clientUserId(businessId.toString()))
+        .language(LANGUAGE)
+        .countryCodes(Collections.singletonList(CountryCode.US));
+  }
+
+  /**
+   * Begin the process for re-linking or completing a micro-deposit flow
+   *
+   * @param businessId The business (user, from a Plaid perspective) involved
+   * @param accessToken the accessToken corresponding to the institution to link
+   * @return The LinkTokenCreateRequest
+   * @throws IOException if there's a problem calling Plaid or validating the response
+   */
+  public String createReLinkToken(TypedId<BusinessId> businessId, String accessToken)
       throws IOException {
-    // TODO CAP-218 Use RUX https://plaid.com/docs/link/returning-user/
     LinkTokenCreateRequest request =
-        new LinkTokenCreateRequest()
-            .clientName(PLAID_CLIENT_NAME)
-            .user(new LinkTokenCreateRequestUser().clientUserId(businessId.toString()))
-            .language(LANGUAGE)
-            .countryCodes(Collections.singletonList(CountryCode.US))
-            .accessToken(accessToken);
+        createLinkTokenCreateRequest(businessId).accessToken(accessToken);
     Response<LinkTokenCreateResponse> response = plaidApi.linkTokenCreate(request).execute();
     log.debug("{}", response.code());
 
     return validBody(businessId, response).getLinkToken();
   }
 
-  public String createLinkToken(TypedId<BusinessId> businessId, List<Products> products)
+  /**
+   * Begin the process for linking an account.
+   *
+   * @param businessId The business (user, from a Plaid perspective) involved
+   * @return The LinkTokenCreateRequest
+   * @throws IOException if there's a problem calling plaid or validating the response
+   */
+  public String createNewLinkToken(TypedId<BusinessId> businessId, List<Products> products)
       throws IOException {
     // TODO CAP-218 Use RUX https://plaid.com/docs/link/returning-user/
     LinkTokenCreateRequest request =
-        new LinkTokenCreateRequest()
-            .clientName(PLAID_CLIENT_NAME)
-            .language(LANGUAGE)
-            .countryCodes(Collections.singletonList(CountryCode.US))
+        createLinkTokenCreateRequest(businessId)
             .products(products)
-            .user(new LinkTokenCreateRequestUser().clientUserId(businessId.toString()));
+            .webhook(plaidProperties.getWebhook());
+    // FLEXIBLE_AUTH is not enabled on Plaid
+    // .auth(new LinkTokenCreateRequestAuth().flowType(FlowTypeEnum.FLEXIBLE_AUTH));
+    request.setAccountFilters(new LinkTokenAccountFilters().depository(DEPOSITORY_FILTER));
+
     Response<LinkTokenCreateResponse> response = plaidApi.linkTokenCreate(request).execute();
     log.debug("{}", response.code());
 
     return validBody(businessId, response).getLinkToken();
   }
 
-  public AccountsResponse getAccounts(String accessToken, @NonNull TypedId<BusinessId> businessId)
+  protected List<AccountBase> filterForDepository(List<AccountBase> accounts) {
+    Set<String> validSubtypes =
+        DEPOSITORY_FILTER.getAccountSubtypes().stream()
+            .map(DepositoryAccountSubtype::getValue)
+            .collect(Collectors.toSet());
+    return accounts.stream()
+        .filter(a -> a.getSubtype() != null && validSubtypes.contains(a.getSubtype().getValue()))
+        .toList();
+  }
+
+  public AccountsResponse getAccounts(@NonNull TypedId<BusinessId> businessId, String accessToken)
       throws IOException {
     AuthGetRequest authGetRequest = new AuthGetRequest().accessToken(accessToken);
     Response<AuthGetResponse> authGetResponse = plaidApi.authGet(authGetRequest).execute();
@@ -158,10 +189,13 @@ public class PlaidClient {
     String institutionName = getInstitutionName(body.getItem().getInstitutionId());
 
     return new AccountsResponse(
-        accessToken, body.getAccounts(), body.getNumbers().getAch(), institutionName);
+        accessToken,
+        filterForDepository(body.getAccounts()),
+        body.getNumbers().getAch(),
+        institutionName);
   }
 
-  private String getInstitutionName(String institutionId) throws IOException {
+  public String getInstitutionName(String institutionId) throws IOException {
 
     Response<InstitutionsGetByIdResponse> institution =
         plaidApi
@@ -180,6 +214,25 @@ public class PlaidClient {
     Response<AccountsGetResponse> response = client().accountsBalanceGet(request).execute();
     final AccountsGetResponse accountsGetResponse = validBody(businessId, response);
     return accountsGetResponse.getAccounts();
+  }
+
+  public AccountsResponse getVerificationStatus(
+      @NonNull TypedId<BusinessId> businessId, @NonNull String accessToken) throws IOException {
+    AccountsGetRequest request = new AccountsGetRequest().accessToken(accessToken);
+    Response<AccountsGetResponse> response = client().accountsGet(request).execute();
+    @NonNull AccountsGetResponse accountsGetResponse = validBody(businessId, response);
+    return new AccountsResponse(
+        accessToken,
+        filterForDepository(accountsGetResponse.getAccounts()),
+        accountsGetResponse.getAccounts().stream()
+            .map(
+                a -> {
+                  NumbersACH n = new NumbersACH();
+                  n.setAccountId(a.getAccountId());
+                  return n;
+                })
+            .toList(),
+        getInstitutionName(accountsGetResponse.getItem().getInstitutionId()));
   }
 
   /**
@@ -209,7 +262,7 @@ public class PlaidClient {
           new PlaidLogEntry(businessId, new EncryptedString(errorBody), PlaidResponseType.ERROR));
       throw new PlaidClientException(error, errorBody, String.valueOf(response));
     }
-    final T responseObj = (T) Objects.requireNonNull(response.body());
+    final T responseObj = Objects.requireNonNull(response.body());
     PlaidResponseType responseType =
         Arrays.stream(PlaidResponseType.values())
             .filter(t -> t.getResponseClass().isAssignableFrom(responseObj.getClass()))
@@ -223,9 +276,9 @@ public class PlaidClient {
   }
 
   public String exchangePublicTokenForAccessToken(
-      @NonNull String linkToken, @NonNull TypedId<BusinessId> businessId) throws IOException {
+      @NonNull TypedId<BusinessId> businessId, @NonNull String publicToken) throws IOException {
     ItemPublicTokenExchangeRequest itemPublicTokenCreateRequest =
-        new ItemPublicTokenExchangeRequest().publicToken(linkToken);
+        new ItemPublicTokenExchangeRequest().publicToken(publicToken);
     Response<ItemPublicTokenExchangeResponse> response =
         plaidApi.itemPublicTokenExchange(itemPublicTokenCreateRequest).execute();
 
@@ -233,23 +286,29 @@ public class PlaidClient {
   }
 
   public String getStripeBankAccountToken(
-      String plaidAccessToken, String plaidAccountId, TypedId<BusinessId> businessId) {
+      TypedId<BusinessId> businessId, String plaidAccessToken, String plaidAccountId)
+      throws IOException {
     ProcessorStripeBankAccountTokenCreateRequest request =
         new ProcessorStripeBankAccountTokenCreateRequest()
             .accessToken(plaidAccessToken)
             .accountId(plaidAccountId);
-    try {
-      Response<ProcessorStripeBankAccountTokenCreateResponse> response =
-          plaidApi.processorStripeBankAccountTokenCreate(request).execute();
+    Response<ProcessorStripeBankAccountTokenCreateResponse> response =
+        plaidApi.processorStripeBankAccountTokenCreate(request).execute();
 
-      return validBody(businessId, response).getStripeBankAccountToken();
-    } catch (IOException e) {
-      throw new RuntimeException("Failed to get stripe account token from plaid", e);
-    }
+    return validBody(businessId, response).getStripeBankAccountToken();
   }
 
   /** For testing only */
   public Boolean sandboxItemResetLogin(TypedId<BusinessId> businessId, String plaidAccessToken) {
+    throw new UnsupportedOperationException();
+  }
+
+  /** For testing only */
+  public @NonNull SandboxItemSetVerificationStatusResponse setVerificationStatus(
+      @NonNull TypedId<BusinessId> businessId,
+      String accessToken,
+      String accountId,
+      VerificationStatusEnum newStatus) {
     throw new UnsupportedOperationException();
   }
 }
